src/tests/ci/assignment_5_functions/valid/01_function_valid.c
int add(int a, int b);

int add(int a, int b) {
    return a + b;
}

int main() {
    int x = add(5, 3);
    return 0;
}