src/tests/ci/assignment_5_functions/invalid_syntax/06_function_invalid_param_type.c
int add(invalid_type a, int b) {
    return a + b;
}

int main() {
    return add(2, 3);
}